fix video align 2

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -218,9 +218,9 @@ body {
 
 /* Modern Video and Carousel Styling */
 .publication-video {
-    /* position: relative; */
-    display: flex;
-    justify-content: center;
+    position: relative;
+    /* display: flex;
+    justify-content: center; */
 
     width: 100%;
     height: 0;
